--- a/ewm/src/main/resources/application.properties
+++ b/ewm/src/main/resources/application.properties
@@ -1,24 +1,17 @@
-# ????????? ???????
-server.port=8080
+server.port=8081
 
-# ????????? ???? ??????
-spring.datasource.url=jdbc:postgresql://localhost:7432/explorewithme
-spring.datasource.username=admin
-spring.datasource.password=password
+management.endpoints.web.exposure.include=health
+management.endpoint.health.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/ewm
+spring.datasource.username=sa
+spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ????????? JPA ? Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
-# ??????????? SQL-????????
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# ????????? ??? ?????? ? ???????? ??????????
-stats-server.url=http://stats-server:9090
-
-# ????????????? ???? ?????? (???? ?????)
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+
+spring.application.name=ewm-main-service
+
+stats-server.url=http://localhost:9091
