--- a/stats/stats-service/src/main/resources/application.properties
+++ b/stats/stats-service/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-server.port=9090
+server.port=9091
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/stats
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+
 spring.sql.init.mode=always
-
-#---
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6432/stats
-spring.datasource.username=admin
-spring.datasource.password=password
-#---
-spring.config.activate.on-profile=test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stats
-spring.datasource.username=admin
-spring.datasource.password=password
