--- a/ewm/src/main/resources/application.properties
+++ b/ewm/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 management.endpoints.web.exposure.include=health
 management.endpoint.health.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/ewm
+spring.datasource.url=jdbc:postgresql://ewm-db:5434/ewm
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
