--- a/stats/stats-service/src/main/resources/application.properties
+++ b/stats/stats-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 management.endpoints.web.exposure.include=health
 management.endpoint.health.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats
+spring.datasource.url=jdbc:postgresql://stats-db:5432/stats
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
